update: add rm command

--- a/scripts/central_node.service
+++ b/scripts/central_node.service
@@ -6,7 +6,7 @@ After=network.target
 [Service]
 Type=simple
 WorkingDirectory=/home/hairo/Application/hairo2024_central_node
-ExecStartPre=sudo /var/run/pigpio.pid
+ExecStartPre=sudo rm /var/run/pigpio.pid
 ExecStartPre=sudo pigpiod
 ExecStart=/home/hairo/python-env/bin/python3 main.py
 User=hairo
